--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <link rel="stylesheet" type="text/css" href="style/animate.css" />
 <link rel="stylesheet" type="text/css" href="style/unsemantic-grid-responsive.css" />
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41153384-1', 'nicolechiu.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 <div id="social">
