--- a/media.html
+++ b/media.html
@@ -16,6 +16,16 @@
 
 <!-- Optionally add helpers - button, thumbnail and/or media -->
 <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-41153384-1', 'nicolechiu.com');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 <div class="nav">
