updated fashion and startup pages

--- a/fashion.html
+++ b/fashion.html
@@ -46,35 +46,20 @@
      </a>
   </div>
   <div id="anchr">
-    <a href="https://www.anchr.co/the_nicole_chiu" target="_blank">
-      <img src="images/anchr.png" alt="Anchr">
-    </a>
-    A social focus group where I take polls on the latest fashion and beauty trends!
+    <a href="https://www.sharesomestyle.com/nicolechiuwang" target="_blank">
+      <img src="images/SSS_logo.png" alt="Share Some Style">
+    </a><br>
+    Personal stylist services, including closet audits and shopping trips, to help you dress for the life you want!
   </div>
   <div id="fashiontechstartups">
-    <h2>I <img src="images/heart.png" alt="heart" id="heart"> Fashion Tech Startups</h2>
-      <a href="https://www.rocksbox.com/" target="_blank">
-        <img src="images/rocksboxlogo.png" alt="RocksBox" id="rocksbox">
-      </a>
-      <a href="http://thirdwavefashion.com/" target="_blank">
-        <img src="images/twflogo.png" alt="Third Wave Fashion" id="twf">
-      </a>
-      <a href="http://www.togandporter.com/" target="_blank">
-        <img src="images/togandporterlogo.png" alt="Tog+Porter" id="togandporter">
-      </a>
-      <a href="https://beautyarmy.com/" target="_blank">
-        <img src="images/beautyarmylogo.png" alt="Beauty Army" id="beautyarmy">
-      </a>
-      <a href="http://pinterest.com/" target="_blank">
-        <img src="images/pinterestlogo.png" alt="Pinterest" id="pinterestlogo">
-      </a>
-      <a href="http://www.popsugar.com/fashion" target="_blank">
-        <img src="images/popsugarlogo.png" alt="Popsugar" id="popsugar">
-      </a>
+      <a href="https://www.treadfastfit.com" target="_blank">
+      <img src="images/treadfast_logo.png" alt="Treadfast">
+    </a><br>
+     Treadfast designs tall socks with grips perfect for Bar Method, barre classes, Pilates, and yoga.<br><br>We support you and your extraordinary life from the feet up, with socks that embody both beautiful form and high quality function, just like you.
   </div>
   <div id="ms-jd">
     <a href="http://ms-jd.org/search/node/the_nicole_chiu" target="_blank">
-      <img src="images/ms-jd.png" alt="Ms. JD">
+      <img src="images/MS-JD-Logo.png" alt="Ms. JD">
     </a><br>
     "Chiu on This" - a monthly fashion column posted on the Ms. JD blog for young women in the legal profession and law school!
   </div>
