--- a/startup.html
+++ b/startup.html
@@ -99,21 +99,25 @@
     <div id="languages"> HTML / CSS / JavaScript</div>
     <div class="italics">*** I built this website ***</div>
   </div><br>
-  <div>
-    User Research &amp; Surveys
+   <div>
+    Operations Management
+  </div><br>
+   <div>
+    Email Marketing &amp; Social Media
   </div><br>
   <div>
-    User Flows and Stories
+   Growth Hacking online &amp; off 
   </div><br>
   <div>
-    User Personas
+    User Research &amp; Testing
+  </div><br>
+  <div>
+    User Flows &amp; Personas
   </div><br>
   <div>
     Wireframing
   </div><br>
-  <div>
-    User Testing
-  </div>
+
 </div>
 <script src="javascript.js"></script>
 </body>
