fixed issue with Ms JD logo

--- a/fashion.html
+++ b/fashion.html
@@ -59,7 +59,7 @@
   </div>
   <div id="ms-jd">
     <a href="http://ms-jd.org/search/node/the_nicole_chiu" target="_blank">
-      <img src="images/MS-JD-Logo.png" alt="Ms. JD">
+      <img src="images/Ms-JD-Logo.png" alt="Ms. JD">
     </a><br>
     "Chiu on This" - a monthly fashion column posted on the Ms. JD blog for young women in the legal profession and law school!
   </div>
