Changed to Coming Soon page

--- a/index.html
+++ b/index.html
@@ -1,56 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Nicole Chiu-Wang</title>
-<link href='http://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="style/normalize.css" />
-<link rel="stylesheet" type="text/css" href="style/style.css" />
-<link rel="stylesheet" type="text/css" href="style/animate.css" />
-<link rel="stylesheet" type="text/css" href="style/unsemantic-grid-responsive.css" />
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-41153384-1', 'nicolechiu.com');
-  ga('send', 'pageview');
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Coming Soon</title>
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<link href="tools/style.css" rel="stylesheet" type="text/css" />
+<link href="tools/960.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
+<script type="text/javascript" src="js/cufon-yui.js"></script>
+<script type="text/javascript" src="js/Clarendon_LT_Std_700.font.js"></script>
+<script type="text/javascript">
+	Cufon.replace('h1,h3', {fontFamily: 'Clarendon LT Std', hover:true})
 </script>
 </head>
 <body>
-<div id="social">
-   <a href="https://twitter.com/The_Nicole_Chiu" target="_blank">
-     <img src="images/twitterbutton.jpeg" alt="Twitter" id="twitter">
-   </a>
-   <a href="http://www.youtube.com/user/TheNicoleChiu" target="_blank"> <img src="images/youtubebutton.jpeg" alt="Youtube" id="youtube">
-   </a>
-   <a href="http://www.linkedin.com/in/nicolechiu/" target="_blank">
-     <img src="images/linkedinbutton.jpeg" alt="Linkedin" id="linkedin">
-   </a>
-   <a href="http://pinterest.com/thenicolechiu/boards/" target="_blank">
-     <img src="images/pinterestbutton.jpeg" alt="Pinterest" id="pinterest">
-   </a>
+<div id="shim"></div>
+<div id="content">
+	<div class="logo_box"><h1>Nicole<br/>Chiu-Wang</h1></div>          
+	<div class="main_box">
+		<br/><br/><br/>
+		<h2>New website coming soon.<br/><span>In the mean time connect with me below</span></h2>
+		
+		<ul class="info">
+			<li>
+				<a href="https://twitter.com/thenicolecw" alt="@thenicolecw on Twitter" target= '_blank' class="twitter-icon"></a>
+				<a href="https://instagram.com/thenicolecw" alt="@thenicolecw on Instagram" target='_blank' class="instagram-icon"></a>
+				<a href="https://linkedin.com/in/nicolechiu" alt="Nicole-Chiu-Wang on LinkedIn" target='_blank' class="linkedin-icon"></a>
+			</li>
+		</ul>
+	</div>
 </div>
-<div class="mainheader">
-	From "fired" to hired,<br>
-  <span id="line2">life after <span id="apprentice">The Apprentice...</span></spam>
-</div>
-<div id="tagline">
-	Passion Forward!
-</div>
-<div class="circles">
-<a href="startup.html" id="startupcircle">Startup Experience</a>
-<a href="legal.html" id="legalcircle">Legalista</a>
-<a href="fashion.html" id="fashioncircle">Fashionista</a>
-<a href="media.html" id="mediacircle">Media &amp; Technology</a>
-<a href="social.html" id="socialcircle">Let's get social!</a>
-</div>
-<div>
-<img src="images/leaningpic.png" alt="Nicole Chiu" id="leaningpic">
-</div>
-<script src="javascript.js"></script>
+
 </body>
 </html>
