--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 		
 		<ul class="info">
 			<li>
-				<a href="https://twitter.com/thenicolecw" alt="@thenicolecw on Twitter" target= '_blank' class="twitter-icon"></a>
+				<a href="http://boonandgable.com" target='_blank' class="boonandgable">
+					<img src="images/boonandgable.png" alt="Boon and Gable" style="width:48px; height:48px;">
+				</a>
+				<a href="https://twitter.com/thenicolecw" alt="@thenicolecw on Twitter" target='_blank' class="twitter-icon"></a>
 				<a href="https://instagram.com/thenicolecw" alt="@thenicolecw on Instagram" target='_blank' class="instagram-icon"></a>
 				<a href="https://linkedin.com/in/nicolechiu" alt="Nicole-Chiu-Wang on LinkedIn" target='_blank' class="linkedin-icon"></a>
 			</li>
