--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<ul class="info">
 			<li>
 				<a href="http://boonandgable.com" target='_blank' class="boonandgable">
-					<img src="images/boonandgable.png" alt="Boon and Gable" style="width:48px; height:48px;">
+					<img class="boonandgable" src="images/boonandgable.png" alt="Boon and Gable">
 				</a>
 				<a href="https://twitter.com/thenicolecw" alt="@thenicolecw on Twitter" target='_blank' class="twitter-icon"></a>
 				<a href="https://instagram.com/thenicolecw" alt="@thenicolecw on Instagram" target='_blank' class="instagram-icon"></a>
